<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/lightcyan"
    tools:context="com.akatowolf.area.MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/aG">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circulo"
            android:id="@+id/aCirculo"
            android:checked="false"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuadro"
            android:id="@+id/aCuadro"
            android:checked="false"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triangulo"
            android:id="@+id/aTriangulo"
            android:checked="false"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rectangulo"
            android:id="@+id/aRectangulo"
            android:checked="false"/>
    </RadioGroup>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:hint="@string/altura"
            android:inputType="numberDecimal"
            android:id="@+id/aAltura"
            android:textColor="@color/red"
            android:singleLine="true"
            android:visibility="gone"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:hint="@string/base"
            android:inputType="numberDecimal"
            android:id="@+id/aBase"
            android:textColor="@color/red"
            android:singleLine="true"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:hint="@string/radio"
            android:inputType="numberDecimal"
            android:id="@+id/aRadio"
            android:textColor="@color/red"
            android:singleLine="true"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:hint="@string/lado"
            android:inputType="numberDecimal"
            android:id="@+id/aLado"
            android:textColor="@color/red"
            android:singleLine="true"
            android:visibility="gone"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aCalcular"
            android:gravity="center"
            android:background="@drawable/botoncalcular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/resultado"
            android:id="@+id/aResultado"
            android:textColor="@color/black"
            android:textSize="30dp"/>


</LinearLayout>
